log
Wed 24 Apr 2024 06:24:17 PM UTC: 
 hashmap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:25: error: expected expression before ‘)’ token
   55 |   HashMap *mapa = (mapa*) malloc(sizeof(Pair) * capacity);
      |                         ^
hashmap.c:57:17: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   57 |   mapa->current = NULL;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
7d7e250
Wed 24 Apr 2024 06:24:30 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:55:25: error: expected expression before ‘)’ token
   55 |   HashMap *mapa = (mapa*) malloc(sizeof(Pair) * capacity);
      |                         ^
Compilation failed
4d84135
Wed 24 Apr 2024 06:24:42 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7425a52
Wed 24 Apr 2024 06:25:17 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
5eccecf
Wed 24 Apr 2024 06:25:35 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:10: error: expected identifier before ‘&’ token
   56 |   mapa-> &buckets = NULL;
      |          ^
Compilation failed
b2b6e3c
Wed 24 Apr 2024 06:27:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fb66203
Wed 24 Apr 2024 06:28:01 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
4fc16f4
Wed 24 Apr 2024 06:28:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a9dd158
Thu 25 Apr 2024 02:09:36 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1ce5a00
Thu 25 Apr 2024 02:11:39 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6e7906b
Thu 25 Apr 2024 02:11:57 AM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
88dbde1
Thu 25 Apr 2024 02:12:46 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fd834bc
